tests/samples/invalid/import_without_semicolon.pn
import "pointer_in_word.pn"

fn main() -> i32
{
	var foo = Foo { x: 20, y: 0 };
	return: foo.x + foo.y
}
